--- a/templates/breaktime.html
+++ b/templates/breaktime.html
@@ -9,10 +9,10 @@
                 <div class="breaktime-name">
                     {{name}} [{{character}}]
                 </div>
-                <label class="breaktime-state{{#if state}} back{{/if}}">{{#if state}}Ready{{else}}Away{{/if}}</label>
+                <label class="breaktime-state{{#if state}} back{{/if}}">{{#if state}}準備好了{{else}}暫離{{/if}}</label>
             </div>
         </div>
         {{/each}}
     </div>
-    <button id="breaktime-btn">{{#if my.state}}Leave Again{{else}}I'm Back{{/if}}</button>
+    <button id="breaktime-btn">{{#if my.state}}再次暫離{{else}}我回來了{{/if}}</button>
 </div>
